--- a/dev/index.html
+++ b/dev/index.html
@@ -353,10 +353,8 @@ VERSION: v1.5.1-header-branding
 </div>
 
 <!-- 상품 2 -->
-<div class="product limited"
-     data-product-id="p002"
-     data-price="99000">
-     data-regular-price="139000">
+<!-- 상품 2 -->
+<div class="product limited" data-product-id="p002" data-price="99000" data-regular-price="139000">
   <img src="images/product2.png">
   <div class="product-body">
     <div class="name">설성한우 정성3호 세트</div>
@@ -376,10 +374,7 @@ VERSION: v1.5.1-header-branding
 </div>
 
 <!-- 상품 3 -->
-<div class="product limited"
-     data-product-id="p003"
-     data-price="39980">
-     data-regular-price="58800">
+<div class="product limited" data-product-id="p003" data-price="39980" data-regular-price="58800">
   <img src="images/product3.png">
   <div class="product-body">
     <div class="name">설성한우 우족탕 선물세트</div>
@@ -399,10 +394,8 @@ VERSION: v1.5.1-header-branding
 </div>
 
 <!-- 상품 4 -->
-<div class="product limited"
-     data-product-id="p004"
-     data-price="39980">
-     data-regular-price="59800">
+<!-- 상품 4 -->
+<div class="product limited" data-product-id="p004" data-price="39980" data-regular-price="59800">
   <img src="images/product4.png">
   <div class="product-body">
     <div class="name">설성목장 제주 설성햄 선물세트</div>
@@ -422,10 +415,8 @@ VERSION: v1.5.1-header-branding
 </div>
 
 <!-- 상품 5 -->
-<div class="product limited"
-     data-product-id="p005"
-     data-price="79980">
-     data-regular-price="130000">
+<!-- 상품 5 -->
+<div class="product limited" data-product-id="p005" data-price="79980" data-regular-price="130000">
   <img src="images/product5.png">
   <div class="product-body">
     <div class="name">설성한우 명품 한우육포 선물세트</div>
