--- a/select/index.html
+++ b/select/index.html
@@ -1,1 +1,30 @@
-<!-- TODO -->
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>청담점 공동구매</title>
+  <style>
+    body{margin:0;padding:16px;background:#f6f7f9;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;}
+    .container{max-width:480px;margin:auto;background:#fff;border-radius:16px;padding:16px;box-shadow:0 8px 24px rgba(0,0,0,0.08);}
+    h1{margin:8px 0 14px;text-align:center;font-size:20px;}
+    .btn{display:block;width:100%;padding:16px;border-radius:12px;border:none;font-size:16px;font-weight:800;margin-top:12px;cursor:pointer}
+    .fresh{background:#2f80ed;color:#fff;}
+    .gift{background:#27ae60;color:#fff;}
+    .note{margin-top:12px;font-size:13px;color:#555;line-height:1.6;background:#f1f3f5;padding:12px;border-radius:12px;}
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>청담점 공동구매 주문서</h1>
+
+    <button class="btn fresh" onclick="location.href='../fresh/'">🍓 신선상품 주문하기</button>
+    <button class="btn gift" onclick="location.href='../gift/'">🎁 선물세트 주문하기</button>
+
+    <div class="note">
+      • 신선상품은 입고 당일(금요일) 방문수령 기준으로 주문을 받습니다.<br>
+      • 선물세트는 원하는 일정 매장수령 또는 무료택배로 주문 가능합니다.
+    </div>
+  </div>
+</body>
+</html>
