--- a/dev/fresh/index.html
+++ b/dev/fresh/index.html
@@ -50,6 +50,8 @@ v1.4.4 (STABLE PATCH)
 - items payload에 product_id(id) 포함
 - GAS 재고 검증 / 차감 로직 연동 완료
 
+ v1.5.3 (DEV CHECK)
+- dev/fresh build 확인용
 ====================================================
 -->
 
