--- a/dev/index.html
+++ b/dev/index.html
@@ -340,14 +340,14 @@ VERSION: v1.5.1-header-branding
 </div>
 
 <!-- 상품 1 -->
-<div class="product limited"
+<div class="product limited" data-product-id="p001" data-price="5980" data-regular-price="8500">
      data-product-id="p001"
-     data-price="6900">
+     data-price="5980">
   <img src="images/product1.png">
   <div class="product-body">
-    <div class="name">설향딸기 500g (3×5 사이즈)</div>
-    <div class="stock-badge">한정 100팩 · 금요일 방문수령만</div>
-    <div class="price">6,900원</div>
+    <div class="name">현미유 바른김 선물세트(도시락김4gx15구성)</div>
+    <div class="stock-badge">역대급 최고 할인가적용!</div>
+    <div class="price">5,980원</div>
     <div class="qty-box">
       <button class="minus">-</button>
       <div class="qty">0</div>
@@ -357,11 +357,11 @@ VERSION: v1.5.1-header-branding
 </div>
 
 <!-- 상품 2 -->
-<div class="product limited" data-product-id="p002" data-price="99000" data-regular-price="139000">
+<div class="product limited" data-product-id="p002" data-price="10980" data-regular-price="31500">
   <img src="images/product2.png">
   <div class="product-body">
-    <div class="name">설성한우 정성3호 세트</div>
-    <div class="stock-badge">한정 30세트</div>
+    <div class="name">1+등급 무항생제 한우 등심국거리300g</div>
+    <div class="stock-badge">한정 50세트!</div>
     <div class="price">
   <div class="price-regular">정상구매가 <span>139,000원</span></div>
   <div class="price-sale">공동구매가 <span>99,000원</span></div>
@@ -375,7 +375,7 @@ VERSION: v1.5.1-header-branding
     </div>
   </div>
 </div>
-
+<!-- 
 <!-- 상품 3 -->
 <div class="product limited" data-product-id="p003" data-price="39980" data-regular-price="59800">
   <img src="images/product3.png">
@@ -435,7 +435,8 @@ VERSION: v1.5.1-header-branding
   </div>
 </div>
 
-
+-->
+ 
 <div class="total">
   <div>상품금액합계: <span id="regularTotal">0</span>원</div>
 
