--- a/dev/index.html
+++ b/dev/index.html
@@ -340,14 +340,18 @@ VERSION: v1.5.1-header-branding
 </div>
 
 <!-- 상품 1 -->
-<div class="product limited" data-product-id="p001" data-price="5980" data-regular-price="8500">
-     data-product-id="p001"
-     data-price="5980">
+<div class="product" data-product-id="p001" data-price="5980" data-regular-price="8500">
   <img src="images/product1.png">
   <div class="product-body">
     <div class="name">현미유 바른김 선물세트(도시락김4gx15구성)</div>
     <div class="stock-badge">역대급 최고 할인가적용!</div>
-    <div class="price">5,980원</div>
+
+    <div class="price">
+      <div class="price-regular">정상구매가 <span>8,500원</span></div>
+      <div class="price-sale">공동구매가 <span>5,980원</span></div>
+      <div class="price-save" data-save-line="1"></div>
+    </div>
+
     <div class="qty-box">
       <button class="minus">-</button>
       <div class="qty">0</div>
@@ -375,7 +379,8 @@ VERSION: v1.5.1-header-branding
     </div>
   </div>
 </div>
-<!-- 
+
+ <!-- 
 <!-- 상품 3 -->
 <div class="product limited" data-product-id="p003" data-price="39980" data-regular-price="59800">
   <img src="images/product3.png">
@@ -434,7 +439,6 @@ VERSION: v1.5.1-header-branding
     </div>
   </div>
 </div>
-
 -->
  
 <div class="total">
