--- a/dev/index.html
+++ b/dev/index.html
@@ -684,7 +684,7 @@ function calc() {
     }
   }
 
-  // 신선상품 수령일 고정 UX는 다음 단계에서 연결(현재는 미구현이면 자동 무시)
+  // 신선상품 수령일 고정 UX는 다음 단계에서 연결(미구현 자동 무시)
   if (typeof applyStrawberryRule === "function") applyStrawberryRule();
 }
 
@@ -755,7 +755,7 @@ orderBtn.innerText = "주문 처리 중...";
 orderBtn.disabled = true;
 orderBtn.style.opacity = "0.7";
 
-// [NOTE] DEV 응답 기반 전송(try/catch + res.json) 보관 구간 (중첩 주석 금지로 제거함)
+// [NOTE] DEV 응답 기반 전송(try/catch + res.json) 보관 구간 (중첩 주석 제거)
 
 
 // ===== 운영용 전송(no-cors) =====
