--- a/dev/index.html
+++ b/dev/index.html
@@ -346,7 +346,7 @@ VERSION: v1.5.1-header-branding
   <img src="images/product1.png">
   <div class="product-body">
     <div class="name">현미유 바른김 선물세트(도시락김4gx15구성)</div>
-    <div class="stock-badge">바삭바삭 고소한 현미유!*품절주의!</div>
+    <div class="stock-badge">*조기품절주의*</div>
 
     <div class="price">
       <div class="price-regular">정상구매가 <span>8,500원</span></div>
