--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ VERSION: v1.5.1-header-branding
     border-radius:999px;
     font-weight:500;
   ">
-    매주 월요일 ~ 수요일 • 오후 4시 마감
+    선물세트 금요일 ~ 수요일 • 오후 4시 마감
   </div>
 
 </div>
@@ -342,15 +342,15 @@ VERSION: v1.5.1-header-branding
 </div>
 
 <!-- 상품 1 -->
-<div class="product" data-product-id="p001" data-price="5980" data-regular-price="8500">
+<div class="product" data-product-id="p001" data-price="45980" data-regular-price="74700">
   <img src="images/product1.png">
   <div class="product-body">
-    <div class="name">현미유 바른김 선물세트(도시락김4gx15구성)</div>
-    <div class="stock-badge">*조기품절주의*</div>
+    <div class="name">설성한우 선물세트</div>
+    <div class="stock-badge">*한정20세트/택배는 매장으로 문의해주세요*</div>
 
     <div class="price">
-      <div class="price-regular">정상구매가 <span>8,500원</span></div>
-      <div class="price-sale">공동구매가 <span>5,980원</span></div>
+      <div class="price-regular">정상구매가 <span>74,700원</span></div>
+      <div class="price-sale">공동구매가 <span>45,980원</span></div>
       <div class="price-save" data-save-line="1"></div>
     </div>
 
@@ -866,6 +866,7 @@ copyBtn.onclick = () => {
 
 </body>
 </html>
+
 
 
 
