--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@ VERSION: v1.5.1-header-branding
   <img src="images/product1.png">
   <div class="product-body">
     <div class="name">설성한우 선물세트</div>
-    <div class="stock-badge">*택배원하실 경우 택배비3500원, 주소는 1:1톡으로 남겨주세요*</div>
+    <div class="stock-badge">*택배원하실 경우 + 택배비3500원, 주소는 방장에게 1:1톡으로 남겨주세요*</div>
 
     <div class="price">
       <div class="price-regular">정상구매가 <span>74,700원</span></div>
@@ -866,6 +866,7 @@ copyBtn.onclick = () => {
 
 </body>
 </html>
+
 
 
 
